2-postgress-service.yml
# Service for postgres_db
apiVersion: v1
kind: Service
metadata:
  name: postgresdb
  labels:
    app: postgresdb
spec:
  type: ClusterIP
  selector:
    app: postgresdb
  ports:
  - name: "db-service"
    port: 5432
    targetPort: 5432
