7-front-end-service.yml
# Service for basic3tier-frontend
apiVersion: v1
kind: Service
metadata:
  labels:
    app: basic3tier-frontend
  name: basic3tier-frontend
spec:
  type: NodePort
  selector:
    app: basic3tier-frontend
  ports:
  - name: "front-end-service"
    port: 5001
    targetPort: 80
    nodePort: 31001
  selector:
    app: basic3tier-frontend
