8-front-end-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end-ingress
  annotations:
spec:
  ingressClassName: 'nginx'
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: basic3tier-frontend
            port:
              number: 5001
